# mDNSResponder

./: CMakeLists.txt  README.md
Clients/DNSServiceBrowser.VB/: DNSServiceBrowser.VB.vbproj
Clients/DNSServiceBrowser.VB/My Project/: Application.Designer.vb  Resources.Designer.vb  Settings.Designer.vb
mDNSCore/: mDNS.c
mDNSShared/: uds_daemon.c
mDNSWindows/: mDNSWin32.c
mDNSWindows/SystemService/: Service.c
